# sample_app

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  How to setup cmake for coverage-test.md  README.md  SECURITY.md  arch_build.cmake  mission_build.cmake
.github/: pull_request_template.md
.github/workflows/: build-run-app.yml  codeql-build.yml  static-analysis.yml  unit-test-coverage.yml
config/: default_sample_app_fcncodes.h  default_sample_app_interface_cfg.h  default_sample_app_internal_cfg.h  default_sample_app_mission_cfg.h  default_sample_app_msg.h  default_sample_app_msgdefs.h  default_sample_app_msgids.h  default_sample_app_msgstruct.h  default_sample_app_perfids.h  default_sample_app_platform_cfg.h  default_sample_app_tbl.h  default_sample_app_tbldefs.h  default_sample_app_tblstruct.h  default_sample_app_topicids.h
eds/: sample_app.xml
fsw/inc/: sample_app_eventids.h  sample_app_msgids.h
fsw/mission_inc/: sample_app_perfids.h  skeleton_app_perfids.h
fsw/platform_inc/: sample_app_msgids.h  sample_app_table.h  skeleton_app_msgids.h
fsw/src/: sample_app.c  sample_app.h  sample_app_cmds.c  sample_app_cmds.h  sample_app_dispatch.c  sample_app_dispatch.h  sample_app_eds_dispatch.c  sample_app_events.h  sample_app_msg.h  sample_app_utils.c  sample_app_utils.h  sample_app_version.h  sample_table.c  sample_table.h  skeleton_app.c  skeleton_app.h  skeleton_app_events.h  skeleton_app_msg.h  skeleton_app_version.h
fsw/tables/: sample_app_tbl.c
unit-test/: CMakeLists.txt
unit-test/common/: eventcheck.c
unit-test/coveragetest/: coveragetest_sample_app.c  coveragetest_sample_app_cmds.c  coveragetest_sample_app_dispatch.c  coveragetest_sample_app_eds_dispatch.c  coveragetest_sample_app_utils.c  sample_app_coveragetest_common.h
unit-test/inc/: ut_sample_app.h
unit-test/stubs/: sample_app_cmds_stubs.c  sample_app_dispatch_stubs.c  sample_app_global_stubs.c  sample_app_stubs.c  sample_app_utils_stubs.c
